--- a/RFM_Online_SomeCountry.ini
+++ b/RFM_Online_SomeCountry.ini
@@ -10,39 +10,64 @@
 ;增强国外GFW：不支持
 ;多国家分组：支持港/美/新
 
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/cmliu/ACL4SSR/refs/heads/main/Clash/CFnat.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/argotunnel.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/Loyalsoldier/v2ray-rules-dat/release/reject-list.txt
-ruleset=🛑 全球拦截,https://raw.githubusercontent.com/Steve5wutongyu6/DNSBlock/refs/heads/main/BlackList.txt
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/adobe.list
-ruleset=📢 微信服务,https://raw.githubusercontent.com/bendusy/RulesForMe/main/WeChat.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=⚡ Cloudflare,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloudflare/Cloudflare.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=📲 电报信息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/juewuy/ShellClash/master/rules/ai.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/Copilot.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/GithubCopilot.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/Claude.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/bendusy/RulesForMe/main/aioai.list
-ruleset=🤖 OpenAi,https://raw.githubusercontent.com/SIJULY/Rules/main/Surge/talkatone.list
-ruleset=📝 Notion,https://raw.githubusercontent.com/bendusy/RulesForMe/main/notion.list
-ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🎥 迪士尼+,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
-ruleset=🎥 tvb,https://raw.githubusercontent.com/bendusy/RulesForMe/main/tvb.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/cmliu/ACL4SSR/main/Clash/CMBlog.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+; 广告和隐私拦截规则
+ruleset=🛑 全球拦截,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/reject_domains.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/reject_domains.list
+
+; 本地网络和直连规则
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/direct_all.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/argotunnel.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/private_domain.mrs
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/cn_domain.mrs
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/cn_ip.mrs
+
+; 系统服务和特殊应用
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/apple_domains.list
+ruleset=🍎 苹果服务,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/apple_domain.mrs
+ruleset=✈️ Speedtest,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/speedtest_domain.mrs
+ruleset=💶 PayPal,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/paypal_domain.mrs
+ruleset=📢 微信服务,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/WeChat.list
+ruleset=⚡ Cloudflare,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/Cloudflare.list
+
+; 常用服务规则
+ruleset=🤖 OpenAi,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/ai_all.list
+ruleset=🤖 OpenAi,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/aioai.list
+ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/github.list
+ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/github_domain.mrs
+ruleset=📹 油管视频,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/youtube.list
+ruleset=📹 油管视频,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/youtube_domain.mrs
+ruleset=🍀 Google,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/google_domain.mrs
+ruleset=🐬 OneDrive,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/onedrive_domain.mrs
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/microsoft.list
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/microsoft_domain.mrs
+ruleset=🎵 TikTok,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/tiktok.list
+ruleset=🎵 TikTok,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/tiktok_domain.mrs
+ruleset=📲 电报信息,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/telegram.list
+ruleset=📲 电报信息,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/telegram_domain.mrs
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/netflix.list
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/netflix_domain.mrs
+ruleset=📝 Notion,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/notion.list
+ruleset=🎥 tvb,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/tvb.list
+ruleset=🎵 Spotify,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/spotify.list
+ruleset=🎥 迪士尼+,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/disney.list
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/proxy_common.list
+
+; 游戏服务
+ruleset=🎮 游戏,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/gaming.list
+
+; 代理规则和国际流量
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/proxy_common.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/gfw_domain.mrs
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/geolocation-!cn.mrs
+
+; IP规则
+ruleset=🍀 Google,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/google_ip.mrs
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/netflix_ip.mrs
+ruleset=📲 电报信息,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/telegram_ip.mrs
+
+; 最终匹配
 ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
@@ -52,17 +77,24 @@ custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 微信服务`select`[]DIRECT
 custom_proxy_group=⚡ Cloudflare`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(Disney|迪士尼|解锁|Media)
-custom_proxy_group=🎥 迪士尼+`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT`(Disney|迪士尼|解锁|Media)
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🎥 迪士尼+`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🎥 tvb`select`[]DIRECT`[]🇭🇰 香港节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换
+custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🇸🇬 新加坡节点`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=📲 电报信息`select`[]🚀 节点选择`[]🎯 全球直连`.*
 custom_proxy_group=🤖 OpenAi`select`[]🇺🇲 美国节点`[]🇸🇬 新加坡节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=📝 Notion`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`.*
+custom_proxy_group=🍀 Google`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🐬 OneDrive`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🎵 TikTok`select`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🎵 Spotify`select`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=✈️ Speedtest`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=💶 PayPal`select`[]DIRECT`[]🇺🇲 美国节点`[]🚀 节点选择
+custom_proxy_group=🎮 游戏`select`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
