更新 config.yaml 文件，调整 tvb 代理节点的顺序，提升代理选择的简洁性和一致性。

--- a/config.yaml
+++ b/config.yaml
@@ -108,7 +108,7 @@ proxy-groups:
   - {name: 📲 电报信息, <<: *pr}
   - {name: 🎥 Netflix, type: select, proxies: [🇸🇬 新加坡自动, 🇺🇲 美国自动, 🎬 流媒体解锁, ♻️ 自动选择, 🌐 全部节点, 直连]}
   - {name: 🎥 迪士尼+, type: select, proxies: [🇸🇬 新加坡自动, 🇺🇲 美国自动, 🎬 流媒体解锁, ♻️ 自动选择, 🌐 全部节点, 直连]}
-  - {name: 🎥 tvb, type: select, proxies: [直连, 🇭🇰 香港节点, 🚀 默认代理, ♻️ 自动选择, 🌐 全部节点]}
+  - {name: 🎥 tvb, type: select, proxies: [🇭🇰 香港节点, 🎬 流媒体解锁, 🚀 默认代理, ♻️ 自动选择, 🌐 全部节点]}
   - {name: 🎵 Spotify, <<: *pr}
   - {name: 🎬 流媒体解锁, type: select, include-all: true, filter: "(?i)流媒体|媒体|解锁"}
   - {name: ✈️ Speedtest, type: select, proxies: [直连, 🚀 默认代理, ♻️ 自动选择]}
