--- a/RFM_Online_SomeCountry.ini
+++ b/RFM_Online_SomeCountry.ini
@@ -76,8 +76,8 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📢 微信服务`select`[]DIRECT
-custom_proxy_group=🤖 OpenAi`select`🤖 AI解锁`[]🇺🇲 美国自动`[]🇸🇬 新加坡自动`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🎥 迪士尼+`select`🇸🇬 新加坡自动`[]♻️ 自动选择`[]🚀 节点选择`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🤖 OpenAi`select`[]🤖 AI解锁`[]🇺🇲 美国自动`[]🇸🇬 新加坡自动`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🎥 迪士尼+`select`[]🇸🇬 新加坡自动`[]♻️ 自动选择`[]🚀 节点选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=🍎 苹果服务`select`[]🇸🇬 新加坡自动`[]🇺🇲 美国自动`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=📝 Notion`select`[]🇸🇬 新加坡自动`[]🇺🇲 美国自动`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🇸🇬 新加坡自动`[]🇺🇲 美国自动`[]🚀 节点选择`[]♻️ 自动选择`[]☑️ 手动切换`[]DIRECT
