--- a/templates/surge5.conf
+++ b/templates/surge5.conf
@@ -140,6 +140,7 @@ server-proxy-name = 🇭🇰 香港节点
 
 # 新增：用于包含手动定义的节点
 🕋 自建节点 = select
+🚀 备用节点 = select, policy-path=订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Streaming.png
 
 [Rule]
 # ===================================================================
