更新规则集，统一多个域名的规则描述为“🎯 全球直连”，确保文件的一致性和可读性。

--- a/templates/surgemini.conf
+++ b/templates/surgemini.conf
@@ -95,13 +95,13 @@ RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/clas
 
 # 常见直连规则
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/argotunnel.list,"🎯 全球直连"
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/WeChat.list,DIRECT
-# 国内常见域名 & 服务
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/ChinaDomain.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/cn_domain.mrs,DIRECT
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/direct_all.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/WeChat.list,"🎯 全球直连"
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/Cloudflare.list,"🎯 全球直连"
+
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/cn_domain.mrs,"🎯 全球直连"
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/direct_all.list,"🎯 全球直连"
 # 内网域名
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/private_domain.mrs,DIRECT
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/private_domain.mrs,"🎯 全球直连"
 # 下载类规则 (直连)
 DOMAIN-SET,https://ruleset.skk.moe/List/domainset/download.conf,"🎯 全球直连",extended-matching
 RULE-SET,https://ruleset.skk.moe/List/non_ip/download.conf,"🎯 全球直连",extended-matching
@@ -109,7 +109,7 @@ RULE-SET,https://ruleset.skk.moe/List/non_ip/download.conf,"🎯 全球直连",e
 # Apple 服务
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/apple_domains.list,"🍎 苹果服务"
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/apple_domain.mrs,"🍎 苹果服务"
-RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,"🎯 全球直连"
 # Microsoft 服务
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/classical/microsoft.list,"Ⓜ️ 微软服务"
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/microsoft_domain.mrs,"Ⓜ️ 微软服务"
@@ -152,8 +152,8 @@ RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geos
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geosite/geolocation-!cn.mrs,"🚀 节点切换"
 
 # 国内 IP 段
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/ChinaCompanyIp.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/cn_ip.mrs,DIRECT
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/ChinaCompanyIp.list,"🎯 全球直连"
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/cn_ip.mrs,"🎯 全球直连"
 
 # Google IP
 RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/geoip/google_ip.mrs,"📢 谷歌FCM"
