--- a/templates/surgemini.conf
+++ b/templates/surgemini.conf
@@ -11,9 +11,9 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 ipv6 = true
 ipv6-vif = auto
 // /////// URL-Test /////////
-internet-test-url = http://223.5.5.5
-proxy-test-url = http://1.1.1.1
-test-timeout = 2
+internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
+proxy-test-url = http://latency-test.skk.moe/endpoint
+test-timeout = 15
 // ///////// DNS ///////////
 dns-server = 223.5.5.5, 119.29.29.29
 doh-skip-cert-verification = true
