--- a/templates/surgemini.conf
+++ b/templates/surgemini.conf
@@ -8,7 +8,7 @@ show-error-page-for-reject = true
 udp-policy-not-supported-behaviour = REJECT
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, iosapps.itunes.apple.com, seed-sequoia.siri.apple.com, sequoia.apple.com
 // //////// IPv6 //////////
-ipv6 = true
+ipv6 = false
 ipv6-vif = auto
 // /////// URL-Test /////////
 internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
@@ -21,6 +21,10 @@ encrypted-dns-server = https://223.5.5.5/dns-query,https://1.12.12.12/dns-query
 // /////// Geo-IP /////////
 geoip-maxmind-url = https://github.com/xream/geoip/releases/latest/download/ipinfo.country.mmdb
 disable-geoip-db-auto-update = false
+// /////// Remote Control /////////
+external-controller-access = YOUR_PASSWORD@0.0.0.0:6160
+http-api = YOUR_PASSWORD@0.0.0.0:6166
+http-api-web-dashboard = true
 
 
 [Ponte]
