--- a/templates/Surge_2024.conf
+++ b/templates/Surge_2024.conf
@@ -97,6 +97,10 @@ Proxy = select, Automatic, Fallback, Hong Kong, Taiwan, Singapore, Japan, United
 
 
 [Rule]
+# > Threads
+# 强制直连白名单，最高优先级，确保这些域名不被任何屏蔽规则影响
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/ForceDirect.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Threads/Threads.list,Automatic
 # > Apple Intelligence
 DOMAIN-SUFFIX,apple-relay.apple.com,AI
 DOMAIN-SUFFIX,apple-relay.cloudflare.com,AI
@@ -117,8 +121,6 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/OneDrive/OneDrive.list,OneDrive
 # > Facebook
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Facebook/Facebook.list,Automatic
-# > Threads
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Threads/Threads.list,Automatic
 # > Instagram
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Instagram/Instagram.list,Automatic
 # > Apple
