--- a/templates/surgemini.conf
+++ b/templates/surgemini.conf
@@ -64,6 +64,8 @@ server-proxy-name = 🇭🇰 香港节点
 🚀 备用节点 = select, policy-path=订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, include-all-proxies=0, icon-url=https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Universal/Streaming.png
 
 [Rule]
+# 强制直连白名单，最高优先级，确保这些域名不被任何屏蔽规则影响
+RULE-SET,https://raw.githubusercontent.com/bendusy/RulesForMe/main/rulesets/custom/ForceDirect.list,DIRECT
 
 DOMAIN-SUFFIX,nbcharts.com,"🎯 全球直连"
 # Bob客户端直连
